--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
     "swiper": "^9.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
