--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^9.21.0",
     "framer-motion": "^10.12.4",
     "next": "13.3.1",
     "postcss": "8.4.23",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-quill": "^2.0.0",
+    "react-unity-webgl": "^9.4.0",
     "swiper": "^9.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
