--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "react-icons": "^4.8.0",
     "react-quill": "^2.0.0",
     "react-unity-webgl": "^9.4.0",
+    "slugify": "^1.6.6",
     "swiper": "^9.2.4",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
