--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-quill": "^2.0.0",
     "react-unity-webgl": "^9.4.0",
     "slugify": "^1.6.6",
