--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.21.0",
     "framer-motion": "^10.12.4",
     "next": "13.3.1",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
